learned how to use class,id, and css link

--- a/web_publishing_codeit/folder1/page1.html
+++ b/web_publishing_codeit/folder1/page1.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <meta charset="utf-8">
 <html>
     <head>
@@ -6,7 +6,7 @@
     </head>
     <body>
         <title>1 페이지</title>
-        <h1>안녕</h1>
+        <h1 style="color: red;">안녕</h1>     <!-- 태그 내부에 바로 css를 쓸 수 있다-->
         
         <a href="../index.html">메인으로</a>
         <a href="folder2/page2.html">2페이지</a>
