--- a/web_publishing_codeit/folder1/folder2/page2.html
+++ b/web_publishing_codeit/folder1/folder2/page2.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <html>
     <head>
-
+        <link href="css/styles.css" rel="stylesheet">
     </head>
     <body>
         <title>2 페이지</title>
