learned how to get fonts from outer source

--- a/web_publishing_codeit/folder1/folder2/page3.html
+++ b/web_publishing_codeit/folder1/folder2/page3.html
@@ -7,6 +7,7 @@
     <body>
         <title>3 페이지</title>
         <h1>안녕3</h1>
+        <a href='page4.html'>페이지4</a>
         <a href="../../index.html">메인으로</a>
     </body>
     
