--- a/web_publishing_codeit/index.html
+++ b/web_publishing_codeit/index.html
@@ -4,12 +4,15 @@
         <title>My First Website</title> <!--제목-->
         <meta charset="utf-8"> <!--한글 깨짐 방지 (head 태그 안에 위치하는 것을 권장)-->
         <link href="css/styles.css" rel="stylesheet"> <!--css link 하기-->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Twinkle+Star&display=swap" rel="stylesheet"> <!-- 외부에서 font를 가져올 수도 있다. 적용할 태그도 확인-->
     </head>
     <body>
     <h1>자칭 첫 웹페이지</h1> <!--헤딩1 (6까지 쓸 수 있다)-->
-    <h2>고딩 때도 배웠던 거 같은데 기분 탓인지..</h2>
+    <h2 style="text-align: center";>고딩 때도 배웠던 거 같은데 기분 탓인지..</h2>
     
-    <p>배우고 까먹지나 않았으면 좋겠다.</p><!--사용시 위아래로 공백-->
+    <p style="text-align:center;">배우고 까먹지나 않았으면 좋겠다.</p><!--사용시 위아래로 공백-->
     <p class="big-blue-text"> 이 문단은 클래스를 적용한 문단이다.</p>
     <p class="centered-text"> 클래스를 적용하고 싶으면 .을 포함한 이름을 스타일 태그 안에 넣고 해당 이름을 
         클래스를 적용하고 싶은 태그 내부에 적거라</p>
@@ -21,17 +24,20 @@
     <em>hi</em> <!--강조, 생김새는 이탤릭-->
     <strong>hello</strong> <!--강조, 생김새는 볼드-->
     <!--위의 em과 strong 같은 경우 강조하는 것을 웹이 인식한다-->
+    <div class="menu">
     <a href="folder1/page1.html">페이지 1</a>
     <a href="folder1/folder2/page2.html">페이지 2</a>
     <a href="folder1/folder2/page3.html">페이지 3</a>
+    <a href="folder1/folder2/page4.html">페이지 4</a>
+    </div>
     <img src="https://1.bp.blogspot.com/-lHbVtSJH5eM/YSsUXNb8fqI/AAAAAAAAA54/34b8Kst23VINwNoFY9aPd4HlxUFsvrodwCLcBGAsYHQ/s1400/Spiderman%2Bhello%2Btobey.jpg" width="800">
     <div class='lol'>
-        <h1 class='name'>샤코</h1>
+        <h1 class='name'>샤코 (Shaco)</h1>
         <img src="https://w.namu.la/s/bab4575ab0b2a95f819e5aa477a062da071114333a4249ee4eb451f4e98a942899203761d05a99fb868dc648aa8c4c4212db19a1a690195d8d8e7a44dac579508ac008bca3bae84c9ffe36c43f64e83482d57fc5b33abe179144e8f5aad97918" class='pic'>
         <p class="centered-text">정글 챔프. 이 챔프로 시작해 첫 레벨30을 찍었다.</p>
     </div>
     <div class='lol'>
-        <h1 class='name'>르블랑</h1>
+        <h1 class='name'>르블랑 (Le Blanc)</h1>
         <img src="https://ddragon.leagueoflegends.com/cdn/img/champion/splash/Leblanc_0.jpg" class="pic">
         <p class="centered-text">미드 챔프. 이 챔프로 미드를 시작했다.</p>
     </div>
@@ -60,3 +66,4 @@
 <!--
     id는 중복으로 사용할 수도 없고 여러 개를 동시에 사용할 수도 없다.
 -->
+<!--<span></span>은 div와 같은 기능인데 줄바꿈을 하지 않는다.-->
